<resources>
    <string name="app_name">OfflineCaching</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>

    <string name="menu_coffee">Coffee</string>
    <string name="menu_dessert">Dessert</string>
    <string name="menu_food">Food</string>
    <string name="menu_restaurant">Restaurant</string>

    <!--    Dessert   -->
    <string name="variety">Variety</string>
    <string name="topping">Topping</string>
    <string name="flavor">Flavor</string>
    <string name="dish">Dish</string>
    <string name="ingredient">Ingredient</string>
    <string name="measurement">Measurement</string>
    <string name="description">Description</string>
    <string name="blend_name">Blend Name</string>
    <string name="origin">Origin</string>
    <string name="intensifier">Intensifier</string>
    <string name="notes">Notes</string>
</resources>