<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_dessert">

    <fragment
        android:id="@+id/nav_dessert"
        android:name="com.example.offlinecaching.ui.dessert.DessertFragment"
        android:label="@string/menu_dessert"
        tools:layout="@layout/fragment_dessert" />

    <fragment
        android:id="@+id/nav_coffee"
        android:name="com.example.offlinecaching.ui.coffee.CoffeeFragment"
        android:label="@string/menu_coffee"
        tools:layout="@layout/fragment_coffee" />

    <fragment
        android:id="@+id/nav_food"
        android:name="com.example.offlinecaching.ui.food.FoodFragment"
        android:label="@string/menu_food"
        tools:layout="@layout/fragment_food" />

    <fragment
        android:id="@+id/nav_restaurant"
        android:name="com.example.offlinecaching.ui.restaurant.RestaurantFragment"
        android:label="@string/menu_restaurant"
        tools:layout="@layout/fragment_restaurant" />
</navigation>